[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/enemy2.png" type="Texture" id=1]
[ext_resource path="res://scripts/Enemy1.gd" type="Script" id=2]
[ext_resource path="res://audio/Catformer_Kill.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17.0359, 4.28711 )

[sub_resource type="Animation" id=3]
resource_name = "death"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("DeathAudioPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [  ],
"times": PoolRealArray(  )
}
tracks/3/type = "value"
tracks/3/path = NodePath("DeathAudioPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "disableCollision"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 0.769897, 0, 0.929688, 1, 0.566406, 0.238953, 0, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="Curve" id=7]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, 200 ), 0.0, 0.0, 0, 0, Vector2( 1, -195 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 90.0
initial_velocity_random = 0.66
angular_velocity = 46.16
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel_curve = SubResource( 8 )
scale = 4.0
color_ramp = SubResource( 6 )

[node name="Enemy1" type="KinematicBody2D" groups=[
"enemy",
]]
z_index = 1
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 16, 1 )
enabled = true
cast_to = Vector2( 0, 18 )

[node name="RayCast_Top" type="RayCast2D" parent="."]
visible = false
rotation = 3.14159
scale = Vector2( 17, 1.2 )
enabled = true
cast_to = Vector2( 0, 18 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -0.174824, -0.174831 )
scale = Vector2( 1.85664, 1.87413 )
process_parent = true
physics_process_parent = true

[node name="Area2D_StompDetector" type="Area2D" parent="."]
position = Vector2( 0, -16.8221 )
monitorable = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_StompDetector"]
modulate = Color( 0.741176, 0.690196, 0.866667, 1 )
self_modulate = Color( 0.709804, 1, 0, 1 )
position = Vector2( 0, -3.7944 )
shape = SubResource( 2 )

[node name="DeathAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/death = SubResource( 3 )
anims/idle = SubResource( 4 )

[node name="EnemyExplosion" type="Particles2D" parent="."]
visible = false
emitting = false
amount = 50
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
process_material = SubResource( 9 )
[connection signal="body_entered" from="Area2D_StompDetector" to="." method="_on_Area2D_StompDetector_body_entered"]
